Closed Bug 1541282 Opened 5 years ago Closed 5 years ago

Work around PR_SetCurrentThreadName() failure on Android in NS_SetCurrentThreadName()

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: rbarker, Assigned: rbarker)

References

Details

Attachments

(1 file)

Currently PR_SetCurrentThreadName() fails on Android. Updating NS_SetCurrentThreadName() to make a native call can work around this issue until it can be fixed in nspr.

PR_SetCurrentThreadName() is broken on Android (Bug 1541216).
In order to work around this issue, NS_SetCurrentThreadName() will
call prctl(PR_SET_NAME, name) until the underlying nspr can be
fixed.

Assignee: nobody → rbarker
Pushed by rbarker@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/dbb61d5c5944
Use native call in NS_SetCurrentThreadName() on Android r=froydnj
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Blocks: 1666303
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: